header z-index bug

--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@ header {
     background-color: #fff;
     left: -100%;
     transition: .2s ease-in;
+    z-index: 450;
 }
 
 @media all and (min-width: 768px) {
@@ -19,7 +20,7 @@ header .fas {
     font-size: 30px;
     left: 10px;
     top: 10px;
-    z-index: 500;
+    /* z-index: 500; */
     transition: .4s;
 }
 
